
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pca_visualization"
requires-python = "==3.11.1"
dynamic = ["version"]

dependencies = [
    # GUI
    "matplotlib==3.8.2",
    "ipywidgets==8.1.1",
    "jupyter==1.0.0",
    "jupyterlab==4.0.12",

    # Math
    "numpy==1.26.4",
    "keras==2.15.0",
    "tensorflow==2.15.0",
    "scipy==1.12.0",
]
